tests/ui/once_result_attr_removed.rs
use cached::macros::once;

#[once(result = true)]
fn load() -> Result<u64, String> {
    Ok(0)
}

fn main() {}
